--- a/Bikrant_Resume_2025.html
+++ b/Bikrant_Resume_2025.html
@@ -36,7 +36,7 @@
             <div class="flex items-center gap-6">
                 <!-- Photo Placeholder -->
                 <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-white shadow-md flex-shrink-0">
-                     <img src="E:\Personal\MyPhoto.png" alt="Bikrant Singh" class="w-full h-full object-fit bg-gray-200">
+                     <img src="MyPhoto.png" alt="Bikrant Singh" class="w-full h-full object-fit bg-gray-200">
                 </div>
                 <div>
                     <h1 class="text-5xl font-bold gradient-text">Bikrant Singh</h1>
