--- a/Bikrant_Resume_2025.html
+++ b/Bikrant_Resume_2025.html
@@ -129,7 +129,7 @@
 				<section class="mt-8">
 					<div id="detailedInfo" class="mt-3 text-gray-600 text-sm space-y-2">
 					<div><span class="font-semibold">LinkedIn:</span> <a href="https://www.linkedin.com/in/bikrant-singh-14687613/" target="_blank" class="text-indigo-500 hover:underline">Click here</a></div>
-					<div><span class="font-semibold">Detailed Info:</span> <a href="https://github.com/bikrantsingh023/BikrantResume/blob/master/Bikrant_Resume_2025.pdf" target="_blank" class="text-indigo-500 hover:underline">Click here</a></div>
+					<div><span class="font-semibold">Detailed Info:</span> <a href="https://bikrantsingh023.github.io/BikrantResume/Bikrant_Resume_2025.html" target="_blank" class="text-indigo-500 hover:underline">Click here</a></div>
 				</div>
 				</section>
             </aside>
