--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             class="w-32 h-32 rounded-full overflow-hidden border-4 border-white shadow-md flex-shrink-0"
           >
             <img
-              src="https://bikrantsingh023.github.io/BikrantResume/MyPhoto.png"
+              src="MyPhoto.png"
               alt="Bikrant Singh"
               class="w-full h-full object-fit bg-gray-200"
               onerror="this.onerror=null;this.src='https://placehold.co/144x144/E2E8F0/4A5568?text=BS';"
