--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <li>
               <strong class="text-gray-100 font-medium">LinkedIn: </strong>
               <a
-                href="https://www.linkedin.com/in/bikrant-singh-14687613/"
+                href="https://www.linkedin.com/in/bikrantsingh023"
                 target="_blank"
                 class="text-indigo-400 hover:underline"
                 >View Profile</a
@@ -714,3 +714,4 @@
     </div>
   </body>
 </html>
+
