--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
               class="fa-solid fa-location-dot text-indigo-400 mt-1 w-4 text-center"
             ></i>
             <span
-              >HN-78, Ground Floor, Gali No. 4, Yamaha Vihar, Sector-49, Noida, UP -
-              201304</span
+              >HN-78, Ground Floor, Gali No. 4, Yamaha Vihar, Sector-49, Noida, District – Gautam Buddha Nagar, UP, Pin-201304</span
             >
           </div>
         </div>
@@ -97,7 +96,7 @@
               </h4>
               <p class="text-white text-sm leading-snug">
                 ReactJS, Redux (Thunk/Toolkit/Saga), Context API, Jest, Enzyme,
-                HTML5, CSS3, NPM, Yarn, Lighthouse, PageSpeed Insights
+                HTML5, CSS3, SCSS, NPM, Yarn, Lighthouse, PageSpeed Insights, Core Web Vitals Tool
               </p>
             </div>
 
@@ -109,7 +108,7 @@
                 Frameworks
               </h4>
               <p class="text-white text-sm leading-snug">
-                Ant Design, Bootstrap, Styled Components, Tailwind CSS, Material
+                Ant Design, Bootstrap, Styled Components, Material
                 UI
               </p>
             </div>
@@ -214,12 +213,20 @@
           <h3 class="text-lg font-bold text-white mb-4">Personal Info</h3>
           <ul class="text-sm space-y-2 text-gray-300">
             <li>
+              <strong class="text-gray-100 font-medium">Name:</strong>
+              Bikrant Singh
+            </li>
+            <li>
               <strong class="text-gray-100 font-medium">Father’s Name:</strong>
               Late Shri Haridatt Singh
             </li>
             <li>
               <strong class="text-gray-100 font-medium">Date of Birth:</strong>
               Jan 01, 1986
+            </li>
+            <li>
+              <strong class="text-gray-100 font-medium">Gender:</strong>
+              Male
             </li>
             <li>
               <strong class="text-gray-100 font-medium">Nationality:</strong>
@@ -237,7 +244,7 @@
               <strong class="text-gray-100 font-medium"
                 >Permanent Address:</strong
               >
-              Shastri Market, Hathras Junction, Dist-Hathras (U.P) Pin-204102
+              Shastri Market, Near Devi Nagar Road, Hathras Junction, District – Hathras, UP, Pin-204102
             </li>
           </ul>
         </section>
@@ -296,8 +303,8 @@
               <strong>Senior React JS Developer.</strong> I have
               <strong>more than 5 Years</strong> of working experience in
               <strong
-                >React JS, Redux and Middleware libraries, HTML5, CSS3,
-                JavaScript, and Typescript.</strong
+                >React JS, Redux and Middleware libraries, React Router, HTML5, CSS3,
+                SCSS, JavaScript, and Typescript.</strong
               >
             </li>
             <li>
@@ -369,7 +376,7 @@
                 <li>
                   Tools & Technologies Used:<strong>
                     ReactJS, Redux (Thunk, Toolkit, Saga), React Router,
-                    JavaSctipt (ES6+), Typescript, Tailwind, Material UI, Styled
+                    JavaSctipt (ES6+), Typescript, HTML5, CSS3, SCSS, Material UI, Styled
                     Components, Ant Design, Bitbucket, GitHub, Docker.</strong
                   >
                 </li>
