--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
           <h3 class="text-lg font-bold text-white mb-4">Personal Info</h3>
           <ul class="text-sm space-y-2 text-gray-300">
             <li>
-              <strong class="text-gray-100 font-medium">Name:</strong>
-              Bikrant Singh
-            </li>
-            <li>
               <strong class="text-gray-100 font-medium">Father’s Name:</strong>
               Late Shri Haridatt Singh
             </li>
+            <li>
+              <strong class="text-gray-100 font-medium">Mother's Name:</strong>
+              Smt. Kamlesh Kumari
+            </li>            
             <li>
               <strong class="text-gray-100 font-medium">Date of Birth:</strong>
               Jan 01, 1986
@@ -239,6 +239,10 @@
             <li>
               <strong class="text-gray-100 font-medium">Languages:</strong>
               English, Hindi
+            </li>
+            <li>
+              <strong class="text-gray-100 font-medium">Hobbies:</strong>
+              Playing Cricket/Badminton, Surfing Internet, Listening Songs
             </li>
             <li>
               <strong class="text-gray-100 font-medium"
